# vela

./: .env.example  .gitignore  =1.8.0  =10.0.0  AGENTS.md  API_DOCUMENTATION.md  ASSISTANT_SAFETY_PLAN.md  CHANGELOG.md  README.md  USER_PROMPTS.md  VPS_RELAY_ARCHITECTURE.md  agent.py  auth.py  config.py  config.yaml  dependencies.py  installer.py  main.py  middleware.py  migrate_vela.sh  mike.txt  phase2_response_models.md  phase3_response_models.md  phase4_response_models.md  phases.txt  prompts.py  pyproject.toml  rate_limiter.py  remotepc.service  requirements.txt  run.py  scheduler_jobs.sqlite  setup.sh
app/: __init__.py  agent.py  auth.py  cli.py  config.py  dependencies.py  main.py  middleware.py  prompts.py  rate_limiter.py  setup_cli.py
doc/: DEVTO_README.md  HOW_IT_WORKS.md  spotifyrecommended.py
routers/: __init__.py  assistant.py  assistant_core.py  assistant_safety.py  assistant_tools.py  audio.py  clipboard.py  display.py  filesystem.py  input_control.py  maintenance.py  media.py  monitoring.py  network.py  notifications.py  power.py  processes.py  scheduler.py  security.py  system_info.py
tests/: conftest.py  test_admin_audit.py  test_agent_tunnel.py  test_alert_history.py  test_alert_scheduling.py  test_assistant.py  test_assistant_conditional.py  test_assistant_download.py  test_assistant_helpers.py  test_assistant_images.py  test_assistant_stream_gate_labels.py  test_assistant_workflow.py  test_audio.py  test_auth.py  test_capabilities.py  test_cli.py  test_clipboard.py  test_desktop_applications.py  test_display.py  test_emails.py  test_media.py  (+19 more)
(+145 files in other folders)
