[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vela"
version = "1.0.0"
description = "Vela RemotePC Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "python-jose[cryptography]>=3.4.0",
  "bcrypt>=4.0.0",
  "PyYAML>=6.0",
  "psutil>=5.9.0",
  "Pillow>=10.0.0",
  "pyperclip>=1.8.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=1.0.0",
  "httpx>=0.27.0",
  "speedtest-cli>=2.1.3",
  "python-multipart>=0.0.6",
  "APScheduler>=3.11.0",
  "SQLAlchemy>=2.0.0",
  "slowapi>=0.1.9",
  "python-dotenv>=1.0.0",
  "websockets",
  "requests",
]

[project.scripts]
vela = "app.main:main"
vela-agent = "app.agent:main"
vela-init = "installer:main"

[tool.setuptools]
py-modules = ["installer"]

[tool.setuptools.packages.find]
include = ["app*"]
